Create Group seeder

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/css/users.css": "/css/users.css",
+    "/css/members.css": "/css/members.css",
     "/css/groups.css": "/css/groups.css",
     "/css/welcome.css": "/css/welcome.css",
     "/css/layouts.css": "/css/layouts.css"
